--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
     <!-- [ Circle Container ] Start -->
 
-    <script src="./script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
